--- a/css/styles.css
+++ b/css/styles.css
@@ -1767,7 +1767,7 @@ input#search {
 .page-print .cart-price, .page-print .price-excl-tax .label, .page-print .price-incl-tax .label, .page-print .price-excl-tax .price, .page-print .price-incl-tax .price { display:inline; }
 .block-viewed .block-content ol li p.product-name { margin:0; }
 .block-account { margin:25px 0; }
-.block-account .block-content ul li { line-height:28px; }
+.block-account .block-content ul li { line-height:28px;padding-left: 20px; }
 .block-account .block-content ul li a {
   font-size:100%;
   font-weight:300;
