用户登录 用户注册等 页面

--- a/css/styles.css
+++ b/css/styles.css
@@ -3277,7 +3277,7 @@ div.icon:hover, span.icon:hover { background-color:#f56032; }
   text-transform:uppercase;
 }
 .category-products .item button.btn-cart {
-  background:none repeat scroll 0 0 #ffb12a;
+  background:none repeat scroll 0 0 #E17698;
   border-radius:20px;
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
