用户中心相关界面和产品列表界面

--- a/css/styles.css
+++ b/css/styles.css
@@ -4532,7 +4532,7 @@ p.category-image img { max-width:100%; }
   padding:2px 12px;
   position:relative;
   text-transform:uppercase;
-  background-color:#414141;
+  background-color:#e67a92;
 }
 .dashboard .welcome-msg, .dashboard .welcome-msg p {
   margin:0;
