登录页面，注册相关页面

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -507,7 +507,7 @@
     .footer-menu-link ul li a {
         display: block;
         padding: 10px 0;
-        background: #000;
+        background: #E67A92;
         color: #ffffff;
         border-bottom: 1px solid #FFFFFF;
     }
