--- a/css/styles.css
+++ b/css/styles.css
@@ -6043,14 +6043,14 @@ span.mt-cart-title {
 .bs-07-tab-category ul.nav-tabs li {
   margin:0;
   padding:0;
-  width:50%;
+  width:100%;
 }
 .bs-07-tab-category ul.nav-tabs li:first-child a {
   border-right:2px solid #ffffff !important;
   border-left:none;
 }
 .bs-07-tab-category ul.nav-tabs li.active {
-  border-top:4px solid #ffb12a !important;
+  border-top: 4px solid #e17698 !important;
   border-left:none;
   border-right:none;
   border-bottom:none;
@@ -6068,7 +6068,7 @@ span.mt-cart-title {
 }
 .bs-07-tab-category ul.nav-tabs li a {
   padding:0;
-  margin:0;
+  margin: 0px 0px 0px 2px;
   height:50px;
   line-height:50px;
   text-transform:uppercase;
