--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
-@import url("http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic");
+/*@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic");*/
 * {
   margin:0;
   padding:0;
