--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-/*@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
-@import url("http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic");*/
 * {
   margin:0;
   padding:0;
@@ -190,7 +188,7 @@ button.button span {
   text-transform:uppercase;
   padding:0 9px;
   height:37px;
-  line-height:37px;
+  line-height:34px;
   text-align:center;
   white-space:nowrap;
   vertical-align:middle;
@@ -2217,8 +2215,8 @@ input#search {
 }
 .product-view .product-shop { text-align:left; }
 .product-view .product-shop .product-shop-content {
-  padding:30px;
-  border:1px solid #dcdcdc;
+  padding: 10px 30px;
+  /*border:1px solid #dcdcdc;*/
   overflow:hidden;
 }
 .product-view .product-shop .product-name {
@@ -2267,8 +2265,9 @@ input#search {
 }
 .product-view .product-shop .price-box .price-as-configured .full-product-price .price { font-size:24px; }
 .product-view .product-shop .price-box .regular-price .price {
-  font-size:24px;
-  font-weight:normal;
+  font-family: "Microsoft YaHei";
+  font-size: 32px;
+  font-weight: initial;
 }
 .product-view .product-shop .price-box .old-price {
   display:inline-block;
@@ -3274,8 +3273,8 @@ div.icon:hover, span.icon:hover { background-color:#f56032; }
   text-align:center;
 }
 .category-products .item h3.product-name a {
-  color:#181818;
-  font-size:14px;
+  color: #999;
+  font-size: 24px;
   letter-spacing:2px;
   text-transform:uppercase;
 }
@@ -3289,8 +3288,8 @@ div.icon:hover, span.icon:hover { background-color:#f56032; }
 }
 .category-products .item button.btn-cart span { padding:0 20px; }
 .category-products .item button.btn-cart span span {
-  font-size:12px;
-  font-weight:400;
+  font-size:16px;
+  /*font-weight:400;*/
   letter-spacing:3.2px;
   padding:0;
   text-transform:uppercase;
@@ -5855,7 +5854,7 @@ span.mt-cart-title {
   color:#968d8d;
   position:relative;
   display:inline-block;
-  margin-bottom:120px;
+  margin-bottom:60px;
 }
 .product-news h2:before {
   background:none repeat scroll 0 0 #999999;
@@ -5903,7 +5902,7 @@ span.mt-cart-title {
   z-index:9944;
 }
 .product-news ul li a.product-image {
-  border:4px solid #e9e9e9;
+  border:2px solid #e9e9e9;
   display:block;
   overflow:hidden;
 }
@@ -5989,11 +5988,11 @@ span.mt-cart-title {
 }
 .product-news ul li .mt-actions button.btn-cart span { padding:0 20px; }
 .product-news ul li .mt-actions button.btn-cart span span {
-  padding:0;
-  font-size:12px;
-  text-transform:uppercase;
-  letter-spacing:3.2px;
-  font-weight:400;
+  font-family: Microsoft YaHei;
+  padding: 0;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 3.2px;
 }
 .list-social-icon {
   text-align:center;
